fix: 공공데이터 API 이중 인코딩 및 챗봇 예외 처리 버그 수정